// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Alert default 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Alert
        className=""
        kind="default"
      >
        <Box
          as="div"
          className="root default"
          horizontalPadding=""
          outline={true}
          padding="small"
          verticalPadding=""
        >
          <div
            className="root root default padding-small outline"
          >
            Lorem ipsum
          </div>
        </Box>
      </Alert>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Alert with kind danger 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Alert
        className=""
        kind="danger"
      >
        <Box
          as="div"
          className="root danger"
          horizontalPadding=""
          outline={true}
          padding="small"
          verticalPadding=""
        >
          <div
            className="root root danger padding-small outline"
          >
            Lorem ipsum
          </div>
        </Box>
      </Alert>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Alert with kind info 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Alert
        className=""
        kind="info"
      >
        <Box
          as="div"
          className="root info"
          horizontalPadding=""
          outline={true}
          padding="small"
          verticalPadding=""
        >
          <div
            className="root root info padding-small outline"
          >
            Lorem ipsum
          </div>
        </Box>
      </Alert>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Alert with kind success 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Alert
        className=""
        kind="success"
      >
        <Box
          as="div"
          className="root success"
          horizontalPadding=""
          outline={true}
          padding="small"
          verticalPadding=""
        >
          <div
            className="root root success padding-small outline"
          >
            Lorem ipsum
          </div>
        </Box>
      </Alert>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/Alert with kind warning 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "width": "100%",
        }
      }
    >
      <Alert
        className=""
        kind="warning"
      >
        <Box
          as="div"
          className="root warning"
          horizontalPadding=""
          outline={true}
          padding="small"
          verticalPadding=""
        >
          <div
            className="root root warning padding-small outline"
          >
            Lorem ipsum
          </div>
        </Box>
      </Alert>
    </div>
  </Router>
</MemoryRouter>
`;
